----- cvs ci ------
Sun Feb 18 14:36:51 NOVT 2001
max:
* keepTrsFiles token for hpt

----- cvs ci ------
Sat Feb 17 23:51:48 NOVT 2001
max (patch from Serguei Revtov):
* exit on unrecognized line in config
* unifying of error messages printing in line.c

----- cvs ci ------
Tue Feb 13 22:38:28 NOVT 2001
max:
* doc updates
* change default path to config (rtfm)

----- cvs ci ------
Mon Feb 12 23:51:23 MSK 2001
Nestyurkin Nikolay:
* fix esc. sequent

----- cvs ci ------
Fri Feb  9 22:23:17 NOVT 2001
max:
* removed CarbonArea keyword, use CarbonCopy.

----- cvs ci ------
Sun Jan 28 17:15:41 NOVT 2001
max:
* netmailFlag, autoAreaCreateFlag, areafixEchoLimit

----- cvs ci ------
Sat Jan 27 15:22:41 NOVT 2001
max:
* forwardRequestMask, denyFwdMask, denyFwdFile tokens

----- cvs ci ------
Sat Jan 20 21:56:54 NOVT 2001
max:
+ autopassive token

----- cvs ci ------
Mon Jan 15 14:19:26 NOVT 2001
max:
+ linkmsgbasedir token
+ mask support in echoArea links (auto-mandatory users)
+ -sbadd() -sbign() echoArea options
+ createFwdNonPass

----- cvs ci ------
Wed Jan  3 15:40:56 UTC 2001
sms:
- fixed some typos in the docs

----- cvs ci ------
Tue Jan  2 12:06:15 UTC 2001
sms:
+ dumping packNetmail and maxUnpackedNetmail

----- cvs ci ------
Mon Dec 25 19:15:50 EET 2000 
dmitry:
+ added processing of tokens packNetmail & maxUnpackedNetmail in tparser

----- cvs ci ------
Mon Dec 18 23:54:19 NOVT 2000
max (patch from Serguei Revtov):
* compilation fidoconf.c with Watcom/W32

----- cvs ci ------
Fri Dec 15 14:06:20 NOVT 2000
max:
* getDescription() code clean up

----- cvs ci ------
Wed Dec 13 18:34:56 UTC 2000
sms:
+ support for long area descriptions

----- cvs ci ------
Sat Dec  9 20:35:07 NOVT 2000
max:
* token kludgeAreaNetmail < kill | ignore | echomail >

----- cvs ci ------
Sat Dec  9 08:57:16 UTC 2000
dmitry:
+ added docs about tokens packNetmail & maxUnpackedNetmail for bsopack

----- cvs ci ------
Fri Dec  8 04:41:07 UTC 2000
sms: