@@ -2,6 +2,7 @@
 Sun Feb 18 14:36:51 NOVT 2001
 max:
 * keepTrsFiles token for hpt
+* [link]BundleNameStyle Amiga
 
 ----- cvs ci ------
 Sat Feb 17 23:51:48 NOVT 2001
